istio/manifests/istio-gitea/gitea-gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gitea-gateway
  namespace: zarf
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - "gitea.###ZARF_DOMAIN_NAME###"
